2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c: Added missing include, corrected doc and type
	of local variable.

	* misc/openvas_logging.h: Corrected type of variable.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* hg/hg_filter.c, hg/hg_debug.c, hg/hg_utils.c, hg/hg_subnet.c,
	hg/test.c, hg/hosts_gatherer.c, hg/hg_dns_axfr.c, hg/hosts_gatherer.h,
	hg/hg_add_hosts.c: Removed inclusion of includes.h, added missing
	includes.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/pcap.c: Cosmetics, doc.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/strutils.h, nasl/nasl_tree.c, nasl/nasl_signature.c,
	nasl/nasl_crypto2.c, nasl/preparse.c, nasl/md5.c, nasl/nasl_host.c,
	nasl/nasl_crypto.c, nasl/nasl_debug.c, nasl/nasl_socket.c,
	nasl/nasl_func.c, nasl/hmacmd5.c, nasl/nasl_text_utils.c, nasl/lint.c,
	nasl/nasl_misc_funcs.c, nasl/nasl_lex_ctxt.c, nasl/nasl_cmd_exec.c,
	nasl/nasl.c, nasl/nasl.h, nasl/regex.c, nasl/nasl_init.c,
	nasl/strutils.c, nasl/nasl_regex.h: Resolved "includes.h"-includes.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/nasl_socket.c: Major reformatting.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/comm.h, misc/openvas_logging.h: Whitespace removed.

	* misc/openvas_logging.c: Adjusted comments, resolved
	"includes.h"-include.

	* base/certificate.c: Cosmetics.

2009-09-23  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_logging.c (free_log_configuration): Explicitly let go of
	the IO channel.
	(openvas_log_func): Change default_level to G_LOG_LEVEL_DEBUG, otherwise
	g_debug messages are always lost when this function is used for
	g_log_default_handler.  Use a temporary openvasd_logging pointer when
	searching through the domain list, else the second search could overwrite
	the log_domain_entry found in the first search.

	* misc/openvas_logging.h: Add rename @todo.
